2016-10-03  Per Bothner  <per@bothner.com>

	Support optional 'spacing' between hbox/vbox children.
	* kawa/pictures.scm (hbox, vbox, zbox):  Use new factory methods.

2016-10-01  Per Bothner  <per@bothner.com>

	* kawa/pictures.scm (picture-write-svg, picture->svg-node):
	New procedures.

2016-09-29  Per Bothner  <per@bothner.com>

	* kawa/pictures.scm (padding, image-write, ->image): New procedures.
	Add add and use some type aliases.

	* kawa/swing.scm: New (kawa swing) library.
	(frame): moved from gnu/kawa/slib/swing.scm.
	(current-frame: New parameter.
	(set-frame-size!, show-picture: New procedures.
	* kawa/process-keywords.scm: New library.
	* Makefile.am: Update accordingly.

	* kawa/pictures.scm (Dimension): Remove class definition.
	(make-Dimension): Use new DDimension class instead.

2016-09-28  Per Bothner  <per@bothner.com>

	* kawa/pictures.scm (border, border-shape, re-center): New functions.

	* kawa/pictures.scm (rectangle): Fix logic bug.

2016-09-03  Per Bothner  <per@bothner.com>

	* kawa/regex.scm (regex-replace*): Add cast needed on Java 9.

2016-09-02  Per Bothner  <per@bothner.com>

	* syntax.scm: Implement pseudo-ranges [<:] and [>:].

2016-08-31  Per Bothner  <per@bothner.com>

	* syntax.scm: Add more options for range syntax.

2016-08-25  Per Bothner  <per@bothner.com>

	* prim_imports.scm: Add import of 'syntax-error'.  This fixes
	Savannah bug #48888 "warning - no declaration seen for syntax-error".

2016-08-12  Per Bothner  <per@bothner.com>

	* ports.java(write, display, etc): Don't initailize sharing/cycle
	table here - it noew happens automatically in DisplayFormat.

2016-07-26  Per Bothner  <per@bothner.com>

	* kawa/pictures.scm (draw): Generalize by using DrawShape:makeDraw.

	* kawa/pictures.scm (image): New procedure.

2016-07-22  Per Bothner  <per@bothner.com>

	* kawa/pictures.scm (rectangle, with-transform,
	rotate, scale, translate, affine-transform): New procedures.

(2016-07-18  Per Bothner  <per@bothner.com>
